# openmpi-exercise

./: .clang-format  01_integral.cpp  02_integral_parallel.cpp  CMakeLists.txt  README.md  sample.cpp
